# advent

./: .gitignore  Cargo.toml  output.txt
.github/workflows/: rust.yml
src/: day01.rs  day03.rs  day04.rs  main.rs  utils.rs
src/2015/: main.rs
src/2019/: main.rs
src/2019/solutions/: day04.rs  day05.rs
src/2019/utilities/intcode/: mod.rs  operation.rs  parameter_mode.rs
src/2021/solutions/: day13.rs
src/2022/: main.rs
src/2022/solutions/: day01.rs  day02.rs  day03.rs
src/solutions/: day01.rs  day02.rs  day05.rs  day06.rs  day07.rs  day08.rs  mod.rs
src/utilities/: intcode.rs
src/utilities/intcode/: execution_error.rs  instruction.rs  mod.rs  mode.rs  operation.rs  virtual_machine.rs
src/utils/: error.rs  lib.rs  puzzle.rs  verification.rs
utils/: get_input.sh  template.nb
