[package]
name = "advent"
version = "0.1.0"
authors = ["Connor Glosser <glosser1@gmail.com>"]
edition = "2021"
default-run = "2022"

[features]
# The `verify` feature is used to verify the solution to each puzzle matches the
# value submitted to Advent of Code. This feature produces an additional set of
# #[test] functions that compare each puzzle's solution with a string literal.
verify = []

[lib]
name = "utils"
path = "src/utils/lib.rs"

[[bin]]
name = "2022"
path = "src/2022/main.rs"

[[bin]]
name = "2021"
path = "src/2021/main.rs"

[[bin]]
name = "2020"
path = "src/2020/main.rs"

[[bin]]
name = "2019"
path = "src/2019/main.rs"

[[bin]]
name = "2015"
path = "src/2015/main.rs"

[dependencies]
clap = "2.33"
itertools = "0.10"
lazy_static = "1.4"
md5 = "0.7"
regex = "1.5"